Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-33094

moc generates code that uses emit instead of Q_EMIT for Q_PROPERTY with MEMBER and NOTIFY

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • 5.2.0
    • 5.1.0
    • Build tools: moc
    • None
    • 8a96679493bcb5e508cf438d6d6f18d0db7a43cc

      We compile globally with QT_NO_KEYWORDS, this prevents us from using MEMBER with NOTIFY. moc generates:

      if (actions_ != *reinterpret_cast< QObject**>(_v)) {
        actions_ = *reinterpret_cast< QObject**>(_v);
        emit actionsChanged();
      }
      

        For Gerrit Dashboard: QTBUG-33094
        # Subject Branch Project Status CR V

            ogoffart Olivier Goffart (Woboq GmbH)
            jfaust Josh Faust
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes